[package]
name = "strunk"
version = "0.1.0"
edition = "2024"
description = "Omit needless infrastructure. Transactional task queues and change feeds backed by your database."

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rand = "0.8"
thiserror = "2"
tokio-util = "0.7"

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"
