[package]
name = "strunk"
version = "0.1.0"
edition = "2024"
description = "Durable task queues and state events for Rust services on PostgreSQL. No broker required."

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rand = "0.8"
thiserror = "2"
tokio-util = "0.7"
clap = { version = "4", features = ["derive", "env"], optional = true }
tabled = { version = "0.17", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

[features]
default = []
cli = ["clap", "tabled", "tracing-subscriber", "anyhow"]
web = ["cli", "axum", "tower-http"]

[[bin]]
name = "strunk"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"
